<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/login_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metagaming.allstarsolitare.LoginActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <View
        android:id="@+id/login_screen_divider"
        android:layout_width="0px"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/login_google_card"
        app:layout_constraintBottom_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_all_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_star"
        android:textStyle="normal"
        android:textColor="@color/text_white"
        android:textSize="26sp"
        android:padding="0dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_screen_divider"/>

    <TextView
        android:id="@+id/login_solitaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solitaire"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        android:textSize="32sp"
        android:padding="0dp"

        app:layout_constraintTop_toBottomOf="@id/login_screen_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/login_splitter"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"/>


    <android.support.v7.widget.CardView
        android:id="@+id/login_guest_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardBackgroundColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toBottomOf="@id/login_splitter"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <TextView
            android:layout_width="@dimen/login_card_width"
            android:layout_height="wrap_content"

            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_white"

            android:text="@string/login_guest"

            android:paddingTop="@dimen/login_btn_vertical_padding"
            android:paddingBottom="@dimen/login_btn_vertical_padding"
            android:layout_marginStart="0px"
            android:layout_marginEnd="0px"
            android:textAlignment="center"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_google_card"
        android:layout_width="@dimen/login_card_width"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="@dimen/card_elevation"
        app:cardBackgroundColor="@color/colorPrimaryDark"

        app:layout_constraintBottom_toTopOf="@id/login_splitter"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="20"

                android:background="@color/colorAccent"/>

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="80"

                android:text="@string/login_google"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_white"

                android:paddingTop="@dimen/login_btn_vertical_padding"
                android:paddingBottom="@dimen/login_btn_vertical_padding"
                android:layout_marginEnd="0dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
