<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metagaming.allstarsolitare.gameSelect.GameSelectActivity"
    android:id="@+id/game_select_coordinator_layout">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/game_select_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/game_select_main_image_height"
        android:theme="@style/AppTheme.ActionBarTheme"
        android:elevation="@dimen/app_bar_elevation">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/game_select_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:scrimVisibleHeightTrigger="@dimen/game_select_main_image_remove"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:layout_margin="0px"
            android:padding="0px">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/game_select_main_image_height"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/cards_bg"
                android:layout_margin="0px"
                android:padding="0px"
                android:id="@+id/game_select_header_image"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/game_select_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/game_select_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- CONTENT HOLDER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- CONSTRAINT FOR LOGIN INFO -->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <View
                    android:id="@+id/game_select_login_info_splitter"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/game_select_login_info_splitter"
                    android:background="@color/lightPrimary"
                    android:padding="0dp"
                    android:layout_margin="0dp"/>

                <!-- TOP HALF -->

                <android.support.v7.widget.CardView
                    android:id="@+id/game_select_login_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardElevation="@dimen/card_elevation"
                    app:cardBackgroundColor="@color/text_dark_grey"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/game_select_login_info_splitter"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/game_select_login_avatar_letter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_white"
                        android:text="@string/g_for_guest"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/game_select_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/game_select_login_info_splitter"
                    app:layout_constraintStart_toEndOf="@id/game_select_login_avatar"
                    android:layout_marginStart="10dp"
                    android:text="@string/guest"
                    android:textColor="@color/text_black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <!-- BOTTOM HALF -->

                <TextView
                    android:id="@+id/game_select_login_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/game_select_login_info_splitter"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/level"
                    android:textColor="@color/text_black"
                    android:textSize="22sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/game_select_login_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/game_select_login_info_splitter"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/game_select_login_level_text"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/text_black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="99"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/game_select_currency_symbol"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/game_select_login_info_splitter"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/native_currency_symbol"
                        android:textSize="18sp"
                        android:textColor="@color/text_white"
                        android:textStyle="bold"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/game_select_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/game_select_login_info_splitter"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/game_select_currency_symbol"
                    android:layout_marginEnd="5dp"
                    tools:text="1337"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </android.support.constraint.ConstraintLayout>

            <!-- Splitter -->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_light_grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_white"/>

            <Button
                android:id="@+id/game_select_button_play_single"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/play_single"
                android:textSize="20sp"
                android:textColor="@color/text_darker_grey"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/lightPrimary"
                android:textAllCaps="false"
                android:onClick="buttonClicked"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/play_three"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_darker_grey"
                android:background="@color/lightPrimary"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_light_grey"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="6dp"
                android:text="@string/practice_modes"
                android:textStyle="normal"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/text_light_dark_grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_light_grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/practice_single"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_darker_grey"
                android:background="@color/lightPrimary"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/practice_three"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_darker_grey"
                android:background="@color/lightPrimary"
                />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/game_select_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:adSize="BANNER"
        android:background="@color/colorAccent"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>


</android.support.design.widget.CoordinatorLayout>